infra/aws/withoutECR/k8s/01-rc-apartments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-apartmentsinfo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-apartmentsinfo
  template:
    metadata:
      labels:
        app: rc-apartmentsinfo
    spec:
      containers:
        - name: rc-apartmentsinfo
          image: agni1984/rc-apartmentsinfo:latest          
          ports: 
            - containerPort: 4000       
---
apiVersion: v1
kind: Service
metadata:
  name: rc-apartments-srv
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /community/health-status
spec:
  type: NodePort
  selector:
    app: rc-apartmentsinfo
  ports:
    - name: rc-apartmentsinfo
      protocol: TCP
      port: 4000
      targetPort: 4000
