infra/aws/withoutECR/k8s/02-rc-buyandsell-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-buyandsellinfo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-buyandsellinfo
  template:
    metadata:
      labels:
        app: rc-buyandsellinfo
    spec:
      containers:
        - name: rc-buyandsellinfo
          image: agni1984/rc-buyandsellinfo:latest          
          ports: 
            - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: rc-buyandsell-srv
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /adverts/health-status
spec:
  type: NodePort
  selector:
    app: rc-buyandsellinfo
  ports:
    - name: rc-buyandsellinfo
      protocol: TCP
      port: 4004
      targetPort: 4004
