infra/aws/withoutECR/k8s/03-rc-carpooling-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-carpoolinginfo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-carpoolinginfo
  template:
    metadata:
      labels:
        app: rc-carpoolinginfo
    spec:
      containers:
        - name: rc-carpoolinginfo
          image: agni1984/rc-carpoolinginfo:latest
          ports: 
            - containerPort: 4006
---
apiVersion: v1
kind: Service
metadata:
  name: rc-carpooling-srv
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /carpoolings/health-status
spec:
  type: NodePort
  selector:
    app: rc-carpoolinginfo
  ports:
    - name: rc-carpoolinginfo
      protocol: TCP
      port: 4006
      targetPort: 4006
