infra/aws/withoutECR/k8s/04-rc-classifieds-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-classifiedsinfo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-classifiedsinfo
  template:
    metadata:
      labels:
        app: rc-classifiedsinfo
    spec:
      containers:
        - name: rc-classifiedsinfo
          image: agni1984/rc-classifiedsinfo:latest
          ports: 
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: rc-classifieds-srv
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /classifieds/health-status
spec:
  type: NodePort
  selector:
    app: rc-classifiedsinfo
  ports:
    - name: rc-classifiedsinfo
      protocol: TCP
      port: 4005
      targetPort: 4005
