infra/aws/withoutECR/k8s/05-rc-contactsinfo-depl.yml
#kubectl apply -f rc-contactsinfo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-contactsinfo-depl
  labels:
    app: rc-contactsinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-contactsinfo
  template:
    metadata:
      labels:
        app: rc-contactsinfo
    spec:
      containers:
        - name: rc-contactsinfo
          image: agni1984/rc-contactsinfo:latest
          ports: 
            - containerPort: 4001 
---
apiVersion: v1
kind: Service
metadata:
  name: rc-contactsinfo-srv
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /contacts/health-status
spec:
  type: NodePort
  selector:
    app: rc-contactsinfo
  ports:
    - name: rc-contactsinfo      
      port: 4001
      targetPort: 4001
