infra/aws/withoutECR/k8s/07-rc-polling-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-pollinginfo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-pollinginfo
  template:
    metadata:
      labels:
        app: rc-pollinginfo
    spec:
      containers:
        - name: rc-pollinginfo
          image: agni1984/rc-pollinginfo:latest
          ports: 
            - containerPort: 4007
---
apiVersion: v1
kind: Service
metadata:
  name: rc-polling-srv
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /pollings/health-status
spec:
  type: NodePort
  selector:
    app: rc-pollinginfo
  ports:
    - name: rc-pollinginfo
      protocol: TCP
      port: 4007
      targetPort: 4007
